[DOXIASITETOOLS-286] Upgrade Parent to 39